import java.util.Date;
import java.util.Map;

public class DigitalWalletGateway extends BaseGateway {

    public DigitalWalletGateway(Map<String, String> config) {
        super("DigitalWalletGateway", config);
    }

    @Override
    public Map<String, String> processPayment(double amount, String currency,
            Map<String, String> customerInfo, Map<String, String> paymentDetails) {
        log("اتصال به API کیف پول دیجیتال در " + config.get("digital_wallet_endpoint"));
        String transactionId = "DW" + new Date().getTime();
        log("پردازش پرداخت کیف پول دیجیتال برای " + customerInfo.get("name"));
        return Map.of("status", "success", "transaction_id", transactionId);
    }

    @Override
    public Map<String, String> refundPayment(String transactionId) {
        log("بازپرداخت تراکنش کیف پول دیجیتال: " + transactionId);
        return Map.of("status", "refunded", "transaction_id", transactionId);
    }

    @Override
    public String getTransactionStatus(String transactionId) {
        log("دریافت وضعیت تراکنش کیف پول دیجیتال: " + transactionId);
        return "PENDING";
    }
}
